call private statistics endpoint
