# docs/swagger.json
@@ -26,14 +26,6 @@
                 "produces": [
                     "application/json"
                 ],
-                "parameters": [
-                    {
-                        "type": "boolean",
-                        "description": "True if all dreams should be shown",
-                        "name": "showPrivateDreams",
-                        "in": "query"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "List of all dreams",
@@ -340,7 +332,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "bool"
+                            "type": "boolean"
                         }
                     },
                     "400": {
@@ -351,6 +343,30 @@
                     },
                     "404": {
                         "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/private/statistics": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Get count per category and person",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Counts by category and persons",
+                        "schema": {
+                            "$ref": "#/definitions/controller.CountsResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
             }
